--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Stack Problems
+title: 김영우 블로그
 description: My Personal Stack Problems
 author: rijfe(김영우)
-github: https://github.com/agusmakmun
+github: https://github.com/rijfe
 about: I'm Programmer for Python & Django. I've made quite a few web apps, especially on Django.
 disqus_shortname: stackproblems
 google_analytics: UA-XXXXXXXX-Y
