--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: 김영우 블로그
 description: My Personal Stack Problems
 author: rijfe(김영우)
 github: https://github.com/rijfe
-about: I'm Programmer for Python & Django. I've made quite a few web apps, especially on Django.
-disqus_shortname: stackproblems
+about: react-native, baekjoon ...
+disqus_shortname: Home
 google_analytics: UA-XXXXXXXX-Y
 
 enableTags: true
